--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div id="content">
   <p>Cart</p>
-  <div *ngFor="let item of items" >
+  <div *ngFor="let item of cart" >
     <app-item [elem]="item" [index]="0"></app-item>
   </div>
 </div>
