--- a/src/app/item/item.component.scss
+++ b/src/app/item/item.component.scss
@@ -12,6 +12,7 @@
   justify-content: center;
   align-items: center;
   width: 300px;
+  cursor: pointer;
 
   img {
     width: 150px;
@@ -40,6 +41,7 @@
   align-items: center;
   direction: rtl;
   justify-content: center;
+  cursor: pointer;
 
   img {
     width: 50px;
