--- a/src/app/item/item.component.css
+++ b/src/app/item/item.component.css
@@ -21,6 +21,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 300px;
+  cursor: pointer;
 }
 .grid img {
   width: 150px;
@@ -46,6 +47,7 @@ body {
   align-items: center;
   direction: rtl;
   justify-content: center;
+  cursor: pointer;
 }
 .list img {
   width: 50px;
