--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
 <app-header (positionEvent)="changePosition($event)" (openCartEvent)="switchOpenCart()">
 
 </app-header>
-<div style="background-color: black; color: white" (click)="sortItems('dsc')">
-  sort dsc
-</div>
 
-<div style="background-color: black; color: white" (click)="sortItems('asc')">
-  sort asc
-</div>
+<label for="items">Order by:</label>
+
+<select #items id="items" (change)="sortItems(items.value)">
+  <option value="asc">from the smallest small to the largest</option>
+  <option value="dsc">from the largest small to the smallest</option>
+</select>
+
+
+<input type="text" #search placeholder="Search by name" maxlength="25" (change)="searchItems(search.value)">
 
 <div style="background-color: black; color: white" (click)="searchItems('Lime')">
   search for Lime
